@@ -14,11 +14,11 @@ params {
 
   // Limit resources so that this can run
   maxCpus = 4
-  maxMemory = 8.GB
+  maxMemory = 32.GB
   maxTime = 48.h
 
   // Input data - Sample Plan
-  //samplePlan = "${projectDir}/test/csv/hpc-bench-wgs-13x.csv"
+  samplePlan = "${projectDir}/test/csv/hpc-bench-wgs-13x.csv"
   //samplePlan = "${projectDir}/test/csv/hpc-bench-wgs-13x_ubam.csv"
   design = "${projectDir}/test/csv/hpc-bench-wgs-13x-design.csv"
 
@@ -27,7 +27,7 @@ params {
   //  ['SRR7890916', ["$baseDir/test/data/SRP162370/WGS_NV_T_2/13X/SRR7890916_1.fastq.gz", "$baseDir/test/data/SRP162370/WGS_NV_T_2/13X/SRR7890916_2.fastq.gz"]],
   //]
 
-  reads = "$baseDir/test/data/SRP162370/*/13X/SRR*_{1,2}.fastq.gz"
+  //reads = "$baseDir/test/data/SRP162370/*/13X/SRR*_{1,2}.fastq.gz"
 
   // Annotations
   genome =  'hg19'
