@@ -10,4 +10,5 @@ dependencies:
   - conda-forge::r-rcolorbrewer=1.1_2=r36h6115d3f_1003
   - conda-forge::r-proxy=0.4_25=r36hcfec24a_0
   - conda-forge::r-dendextend=1.15.1=r36hc72bb7e_0
+  - conda-forge::r-optparse=1.6.6=r36h6115d3f_1
   - conda-forge::r-systemfonts=1.0.2=r36hef9c87a_0
